Revert "fixed wrapping issue on auditions site"
This reverts commit a0d6f571a7196102448bb94c2c9cbe15b278738a.

--- a/css/style.css
+++ b/css/style.css
@@ -3601,13 +3601,5 @@ ul.pagination .active a {
   top: 50%;
   left:50%; 
   background-color: white;
-  transform: translateX(-50%);
-}
-
-h5.mb-0 {
-  white-space: nowrap;
-}
-
-h5.mb-0 span.auditionText {
-  white-space: normal;
-}
+  transform: translateX(-50%)
+;}
